--- a/srn13/settings.json
+++ b/srn13/settings.json
@@ -1,1 +1,1 @@
-{"appsalt":"testSalttoString","users":[{"king":"king2021_11_18"}]}
+{"appsalt":"testSalttoString","users":[{"king":"king2021_11_18"},{"Luca":"Luca2021_11_19"}]}
