--- a/srn13/bin/.gitignore
+++ b/srn13/bin/.gitignore
@@ -1,1 +1,7 @@
+/AES_Encryption.class
+/Container.class
+/FileInfo.class
+/Kommandozeile.class
 /RSA_Encryption.class
+/SHA512.class
+/Settings.class
